tests/baselines/reference/parserES5ForOfStatement2(target=es5).errors.txt
parserES5ForOfStatement2.ts(1,9): error TS1123: Variable declaration list cannot be empty.


==== parserES5ForOfStatement2.ts (1 errors) ====
    for (var of X) {
            
!!! error TS1123: Variable declaration list cannot be empty.
    }